feat: config security